2011-04-11  Anna Cavender  <annacc@chromium.org>

        Reviewed by Eric Carlson.

        Setup ENABLE(TRACK) feature define
        https://bugs.webkit.org/show_bug.cgi?id=53556

        * configure.ac:

2011-04-11  Varun Jain  <varunjain@chromium.org>

        Reviewed by Darin Fisher.

        Resolving FIXME to make new WebWidget method pure virtual since all downstream classes have implemented the method.
        https://bugs.webkit.org/show_bug.cgi?id=58245

        *  Source/WebKit/chromium/public/WebWidget.h:

2011-04-11  Thouraya ANDOLSI  <thouraya.andolsi@st.com>

        Reviewed by Oliver Hunt.

        SH4 JIT SUPPORT.
        https://bugs.webkit.org/show_bug.cgi?id=44329

        Enable JIT support for SH4 platforms.

        * configure.ac:

2011-04-11  Andreas Kling  <andreas.kling@nokia.com>

        Unreviewed Qt build fix, QT_CONFIG doesn't have uitools on bots.

        * Source/WebKit.pri:

2011-04-09  Keith Kyzivat  <keith.kyzivat@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Don't link against fontconfig or X11 if embedded
        https://bugs.webkit.org/show_bug.cgi?id=58104

        * Source/WebKit.pri: Add qpa=>embedded as it should be across all builds.

2011-04-08  Alpha Lam  <hclam@chromium.org>

        Unreviewed, rolling out r83335.
        http://trac.webkit.org/changeset/83335
        https://bugs.webkit.org/show_bug.cgi?id=53556

        GTK and QT bots are broken.

        * configure.ac:

2011-04-08  Kristian Amlie  <kristian.amlie@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Remove modular references after support for the flag was removed.
        https://bugs.webkit.org/show_bug.cgi?id=57018

        Removed modular references after support for the flag was removed.

        Support was removed because the Qt Modularization project decided we
        don't need it. It's better to base decisions on the available
        information, as demonstrated in the patch by checking